<resources>
    <string name="app_name">agenda_salonVIP</string>
    <string name="Nombre">Nombre</string>
    <string name="Fecha">Fecha</string>
    <string name="Servicio">Servicio</string>
    <string name="Telefono">Telefono</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">contraseña</string>
    <string name="login">login</string>
    <string name="creaC">crear cuenta</string>
    <string name="sincuenta">crear cuenta</string>

    <string name="Adminitrcion">Administracion</string>
    <string name="mysalon">MySalon</string>
    <string name="agenda">Agenda</string>
    <string name="empleadosUADM">Empleados</string>
    <string name="email">E-mail</string>
    <string name="promocionUADM">Promocion</string>
    <string name="continuar">Continuar</string>
    <string name="telefono">Telefono</string>
    <string name="servicioUADM">Servicio</string>
    <string name="calificacionUADM">Calificacion</string>
    <string name="hora">Hora</string>
    <string name="nombresalon">Nombre salon</string>
    <string name="dirsalon">Direccion salon</string>
    <string name="tel_salon">Telefono salon</string>
    <string name="correoSalon">Correo salon</string>
    <string name="guardar">Guardar</string>
    <string name="atras">Atras</string>
    <string name="menu">Menu principal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
