<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center|top">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Crear Cuenta" />

    <Space android:layout_width="40dp"
        android:layout_height="40dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"

        tools:layout_editor_absoluteY="152dp"
        tools:layout_editor_absoluteX="89dp"
        android:id="@+id/acceso_usuario"
        android:hint="@string/usuario"
        style="@style/Widget.AppCompat.EditText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        tools:layout_editor_absoluteY="242dp" tools:layout_editor_absoluteX="88dp"
        android:id="@+id/acceso_contrasena"
        android:hint="@string/contrasena"/>
    <Button
        style="@style/boton"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/registrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creaC"
        android:textStyle="italic"
        style="@style/boton"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="visible"
        android:textColor="@color/colorsubrrayado"
        />

</LinearLayout>