<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".proxima_cita">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="143dp"
        android:layout_height="36dp"
        android:text="proxima cita" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/texview14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/Fecha" />

        <TextView
            android:id="@+id/fecha_cita"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/Nombre" />

        <TextView
            android:id="@+id/nom_cita"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/Telefono" />

        <TextView
            android:id="@+id/tel_cita"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/Servicio" />

        <TextView
            android:id="@+id/serv_cita"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <ImageView
        android:id="@+id/guardar_cita"
        android:layout_width="115dp"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:padding="10dp"
        app:srcCompat="@drawable/guardar1" />

</LinearLayout>