<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Actividades.Usuario_Informacion">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/usuario_foto_perfil_circulo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_perfil"></de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Ingresar foto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Usuario:" />

        <TextView
            android:id="@+id/nombre_usu_perfil_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Nombre" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Telefono" />

        <EditText
            android:id="@+id/telefono_usu_Actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="inserta telefono"
            android:inputType="phone" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="selecciona tu profesion"></TextView>

    <TextView
        android:id="@+id/usu_nombre_profesion_tx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="Profesional en " />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profe_seleccionada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Ej:Peluqeuria" />

        <Spinner
            android:id="@+id/spiner_usuario_dato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>

    <EditText
        android:id="@+id/descripcion_profesional"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Describe tu Trabajo"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/guardar" />

    <ImageView
        android:id="@+id/guardar_info_usuario"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_guardar" />


</LinearLayout>